Quick fix for pin alignment

--- a/css/style.css
+++ b/css/style.css
@@ -154,13 +154,13 @@ input::placeholder {
 .pin_icon {
   color: #99BC85;
   font-size: 1.3em;
-  text-align: center;
   position: absolute;
   left: 1.5em;
+  margin: auto auto;
 }
 
 .pin_header {
-  display: inline;
+  display: flex;
 }
 
 /* ============================
